# sql

./: CMakeLists.txt  README.md  SIMPLIFIED_PARSER_README.md  TEST_GUIDE.md  VERIFICATION_SUMMARY.md  demo.sql  run_test.sh  simple_parser  simplified_parser.cpp  test_demo.sql  test_parser  test_parser.cpp  verification_scenario.sql
.cache/clangd/index/: AST.hpp.9CAEA61DDA5CABE1.idx  CLIHandler.cpp.B9A2FDCE0B493729.idx  CLIHandler.hpp.7E2AADA4557F75EF.idx  CatalogManager.cpp.7B3530D3B116CC3A.idx  CatalogManager.hpp.4E5771A4D125AC11.idx  ExecutionEngine.cpp.DCEB04F498F34EE2.idx  ExecutionEngine.hpp.4DBB52EE6745A663.idx  SQLParser.cpp.4421B1589B540764.idx  SQLParser.hpp.EEB413106E5B177E.idx  StorageManager.cpp.418BDF77403CC0E4.idx  StorageManager.hpp.4D4BA325828F43B1.idx  Types.cpp.8990878A57BBFDAF.idx  Types.hpp.4FB8366BA4DAE41B.idx  main.cpp.5548DDC7B6BBDD0C.idx
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  IMPLEMENTATION.md  INDEX.md  QUICK_REFERENCE.md  SIMPLIFICATION_NOTES.md  USER_MANUAL.md
include/db/: AST.hpp  CLIHandler.hpp  CatalogManager.hpp  ExecutionEngine.hpp  SQLParser.hpp  StorageManager.hpp  Types.hpp
scripts/: aggressive_style.py  cleanup_aggressive_std.py  introduce_std_using.py
src/: CLIHandler.cpp  CatalogManager.cpp  ExecutionEngine.cpp  SQLParser.cpp  StorageManager.cpp  Types.cpp  main.cpp
